--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build:core": "pnpm -r --filter hwy run build",
     "build:dev": "pnpm -r --filter @hwy-js/dev run build",
-    "build:create-hwy": "pnpm -r --filter @hwy-js/create-hwy run build",
+    "build:create-hwy": "pnpm -r --filter create-hwy run build",
     "build": "npm run build:dev && npm run build:core && npm run build:create-hwy",
     "dev:core": "pnpm -r --filter hwy run dev",
     "dev:dev": "pnpm -r --filter @hwy-js/dev run dev",
@@ -20,9 +20,8 @@
     "npm-run-all": "^4.1.5"
   },
   "prettier": {
-    "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "tabs": true
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
