--- a/package.json
+++ b/package.json
@@ -19,9 +19,5 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  }
+  "prettier": {}
 }
