--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "publish-beta": "pnpm run build && pnpm -r publish-beta"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.3"
   },
-  "prettier": {
-    "trailingComma": "es5"
-  }
+  "prettier": {}
 }
