--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hwy",
-  "version": "0.3.0-beta.0",
+  "version": "0.3.0-beta.1",
   "author": {
     "name": "Samuel J. Cook"
   },
   "license": "MIT",
-  "description": "Lightweight, flexible, and powerful alternative to NextJS, based on HTMX instead of React",
+  "description": "Simple, lightweight, and flexible web framework, built on Hono and HTMX.",
   "type": "module",
   "main": "dist/index.js",
   "files": [
@@ -19,9 +19,9 @@
   "devDependencies": {
     "@hono/node-server": "^1.2.0",
     "@hwy-js/dev": "workspace:*",
-    "@types/node": "^20.6.3",
-    "hono": "^3.7.1",
-    "rimraf": "^5.0.1",
+    "@types/node": "^20.8.3",
+    "hono": "^3.7.5",
+    "rimraf": "^5.0.5",
     "tsup": "^7.2.0"
   },
   "repository": {
@@ -32,12 +32,20 @@
   "homepage": "https://hwy.dev",
   "bugs": "https://github.com/hwy-js/hwy/issues",
   "keywords": [
+    "simple",
+    "lightweight",
+    "flexible",
     "framework",
+    "metaframework",
+    "web",
     "typescript",
     "htmx",
     "hono",
     "router",
+    "nested",
+    "routing",
     "jsx",
+    "tsx",
     "nextjs",
     "remix"
   ],
