--- a/docs/package.json
+++ b/docs/package.json
@@ -12,10 +12,10 @@
     "@hono/node-server": "^1.2.0",
     "highlight.js": "^11.8.0",
     "hono": "^3.7.5",
-    "hwy": "0.3.0-beta.5"
+    "hwy": "0.3.0"
   },
   "devDependencies": {
-    "@hwy-js/dev": "0.3.0-beta.5",
+    "@hwy-js/dev": "0.3.0",
     "@types/node": "^20.8.3",
     "@types/nprogress": "^0.2.1",
     "cross-env": "^7.0.3",
