--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hwy",
-  "version": "0.4.0-beta.0",
+  "version": "0.4.0-beta.1",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -14,7 +14,7 @@
     "__public"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup-node index.ts --format esm",
+    "build": "rm -rf dist && tsup-node index.ts --format esm",
     "create-hwy": "pnpm run build && node dist/index.js",
     "publish-beta": "npm publish --tag beta"
   },
@@ -29,7 +29,6 @@
     "hwy": "workspace:*",
     "nprogress": "^0.2.0",
     "prettier": "^3.0.3",
-    "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.3",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
