--- a/docs/package.json
+++ b/docs/package.json
@@ -12,10 +12,11 @@
     "@hono/node-server": "^1.2.0",
     "highlight.js": "^11.8.0",
     "hono": "^3.7.5",
-    "hwy": "0.4.0-beta.1"
+    "hwy": "workspace:*"
   },
   "devDependencies": {
-    "@hwy-js/dev": "0.4.0-beta.1",
+    "@hwy-js/build": "workspace:*",
+    "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.8.3",
     "@types/nprogress": "^0.2.1",
     "cross-env": "^7.0.3",
@@ -26,6 +27,6 @@
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=18.14.1"
+    "node": ">=20"
   }
 }
