--- a/docs/package.json
+++ b/docs/package.json
@@ -12,11 +12,11 @@
     "@hono/node-server": "^1.2.0",
     "highlight.js": "^11.8.0",
     "hono": "^3.7.5",
-    "hwy": "workspace:*"
+    "hwy": "0.4.0-beta.3"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:*",
-    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/build": "0.4.0-beta.3",
+    "@hwy-js/dev": "0.4.0-beta.3",
     "@types/node": "^20.8.3",
     "@types/nprogress": "^0.2.1",
     "cross-env": "^7.0.3",
