--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "hwy-prebuild": "tailwindcss -i src/styles/tw-input.css -o src/styles/tw-output.bundle.css",
-    "vercel-build": "tsc --noEmit && hwy-build && cp -r dist/* api",
+    "vercel-build": "tsc --noEmit && hwy-build",
     "start": "node dist/main.js",
     "dev": "hwy-dev-serve"
   },
@@ -12,11 +12,11 @@
     "@hono/node-server": "^1.2.0",
     "highlight.js": "^11.8.0",
     "hono": "^3.7.5",
-    "hwy": "0.4.0-beta.11"
+    "hwy": "0.4.0-beta.12"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.4.0-beta.11",
-    "@hwy-js/dev": "0.4.0-beta.11",
+    "@hwy-js/build": "0.4.0-beta.12",
+    "@hwy-js/dev": "0.4.0-beta.12",
     "@types/node": "^20.8.3",
     "@types/nprogress": "^0.2.1",
     "esbuild": "^0.19.4",
