--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -21,6 +21,11 @@
   "bin": {
     "create-hwy": "./scripts/create-hwy.js"
   },
+  "dependencies": {
+    "detype": "^0.6.3",
+    "inquirer": "^9.2.11",
+    "picocolors": "^1.0.0"
+  },
   "devDependencies": {
     "@types/inquirer": "^9.0.3",
     "@types/node": "^20.8.3",
@@ -33,17 +38,11 @@
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
-  "dependencies": {
-    "detype": "^0.6.3",
-    "inquirer": "^9.2.11",
-    "picocolors": "^1.0.0"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hwy-js/hwy",
     "directory": "packages/create-hwy"
   },
   "homepage": "https://hwy.dev",
-  "bugs": "https://github.com/hwy-js/hwy/issues",
-  "sideEffects": false
+  "bugs": "https://github.com/hwy-js/hwy/issues"
 }
