--- a/docs/package.json
+++ b/docs/package.json
@@ -12,16 +12,19 @@
     "@hono/node-server": "^1.2.0",
     "highlight.js": "^11.8.0",
     "hono": "^3.7.5",
-    "hwy": "0.4.0-beta.29"
+    "hwy": "workspace:*"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.4.0-beta.29",
-    "@hwy-js/dev": "0.4.0-beta.29",
+    "@hwy-js/build": "workspace:*",
+    "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.8.3",
     "@types/nprogress": "^0.2.1",
     "htmx.org": "^1.9.6",
     "nprogress": "^0.2.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.14.1"
   }
 }
