--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "build:dev": "pnpm -r --filter @hwy-js/dev run build",
     "build:create-hwy": "pnpm -r --filter create-hwy run build",
     "build": "npm run build:build && npm run build:dev && npm run build:core && npm run build:create-hwy",
+    "lint:build": "pnpm -r --filter @hwy-js/build run lint",
+    "lint:core": "pnpm -r --filter hwy run lint",
+    "lint:dev": "pnpm -r --filter @hwy-js/dev run lint",
+    "lint:create-hwy": "pnpm -r --filter create-hwy run lint",
+    "lint": "npm-run-all --parallel lint:*",
     "dev:build": "pnpm -r --filter @hwy-js/build run dev",
     "dev:core": "pnpm -r --filter hwy run dev",
     "dev:dev": "pnpm -r --filter @hwy-js/dev run dev",
@@ -19,8 +24,10 @@
     "publish-beta": "pnpm run build && pnpm -r publish-beta"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "prettier": {}
 }
