--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -14,6 +14,7 @@
     "hwy": "workspace:*"
   },
   "devDependencies": {
+    "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.8.3",
     "htmx.org": "^1.9.6",
