--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
+    "types": ["@hwy-js/dev"]
   },
   "exclude": ["node_modules", "dist"]
 }
