--- a/testers/routes/tsconfig.json
+++ b/testers/routes/tsconfig.json
@@ -12,7 +12,8 @@
     "jsxImportSource": "hono/jsx",
     "paths": {
       "~/*": ["./*"]
-    }
+    },
+    "types": ["@hwy-js/dev"]
   },
   "exclude": ["node_modules", "dist"]
 }
