rmv hwy-dev from create-hwy

--- a/packages/create-hwy/tsconfig.json
+++ b/packages/create-hwy/tsconfig.json
@@ -10,8 +10,7 @@
     "verbatimModuleSyntax": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
-    "types": ["@hwy-js/dev"]
+    "jsxImportSource": "hono/jsx"
   },
   "exclude": ["node_modules", "dist"]
 }
