--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@changesets/cli": "^2.26.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
   "prettier": {}
 }
