--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hwy-monorepo",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "author": {
     "name": "Samuel J. Cook"
@@ -23,10 +24,17 @@
     "dev:dev": "pnpm -r --filter @hwy-js/dev run dev",
     "dev": "npm-run-all --parallel dev:*",
     "publish-beta": "pnpm run build && pnpm -r publish-beta",
-    "release": "pnpm run build && changeset publish"
+    "add-beta": "node scripts/add-beta.js",
+    "remove-beta": "node scripts/remove-beta.js",
+    "bump-beta": "node scripts/bump-beta.js",
+    "bump-patch": "node scripts/bump-patch.js",
+    "bump-minor": "node scripts/bump-minor.js",
+    "bump-major": "node scripts/bump-major.js",
+    "current-version": "node scripts/current-version.js",
+    "set-version": "node scripts/set-version.js"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.2",
+    "@types/node": "^20.8.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
