--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,8 @@
     "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
     "lint": "tsc",
     "dev": "rm -rf dist && tsup-node index.ts --format esm --dts --watch --sourcemap",
-    "publish-beta": "npm publish --tag beta"
+    "publish-beta": "npm publish --tag beta",
+    "publish-non-beta": "npm publish"
   },
   "devDependencies": {
     "@hono/node-server": "^1.2.0",
