--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hwy",
-  "version": "0.5.0-beta.0",
+  "version": "0.5.0-beta.1",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -18,7 +18,8 @@
     "lint": "tsc",
     "create-hwy": "pnpm run build && node dist/index.js",
     "publish-beta": "npm publish --tag beta",
-    "publish-non-beta": "npm publish"
+    "publish-non-beta": "npm publish",
+    "update-latest": "pnpm update --latest"
   },
   "bin": {
     "create-hwy": "./scripts/create-hwy.js"
@@ -29,16 +30,22 @@
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20231025.0",
+    "@hono/node-server": "^1.2.0",
     "@types/inquirer": "^9.0.6",
-    "@types/node": "^20.8.7",
+    "@types/node": "^20.8.9",
     "@types/nprogress": "^0.2.2",
-    "hono": "^3.8.3",
+    "bun-types": "^1.0.7",
+    "hono": "^3.8.4",
+    "htmx.org": "^1.9.6",
     "hwy": "workspace:*",
+    "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "wrangler": "^3.15.0"
   },
   "repository": {
     "type": "git",
