--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "test": "npx vitest run",
     "publish-beta": "pnpm run test && pnpm run build && pnpm -r publish-beta",
     "publish-non-beta": "pnpm run test && pnpm run build && pnpm -r publish-non-beta",
-    "update-latest": "pnpm -r update-latest"
+    "update-latest": "pnpm update --latest && pnpm -r update-latest && pnpm i"
   },
   "devDependencies": {
-    "@types/node": "^20.8.7",
+    "@types/node": "^20.8.9",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
