--- a/testers/cf-pages/package.json
+++ b/testers/cf-pages/package.json
@@ -9,23 +9,24 @@
     "start": "node dist/main.js",
     "dev:serve": "hwy-dev-serve",
     "dev:wrangler": "wrangler pages dev ./dist --compatibility-flag=\"nodejs_compat\" --port=5432 --live-reload",
-    "dev": "npm run build && npm-run-all --parallel dev:*"
+    "dev": "npm run build && npm-run-all --parallel dev:*",
+    "update-latest": "pnpm update --latest"
   },
   "dependencies": {
     "@hono/node-server": "^1.2.0",
-    "hono": "^3.8.3",
+    "hono": "^3.8.4",
     "hwy": "workspace:*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231016.0",
+    "@cloudflare/workers-types": "^4.20231025.0",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
-    "@types/node": "^20.8.7",
+    "@types/node": "^20.8.9",
     "htmx.org": "^1.9.6",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "wrangler": "^3.14.0"
+    "wrangler": "^3.15.0"
   },
   "engines": {
     "node": ">=18.14.1"
