--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -19,7 +19,8 @@
     "create-hwy": "pnpm run build && node dist/index.js",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
-    "update-latest": "pnpm update --latest"
+    "update-latest": "pnpm update --latest",
+    "typecheck": "tsc --noEmit"
   },
   "bin": {
     "create-hwy": "./scripts/create-hwy.js"
