--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:core": "pnpm -r --filter hwy run build",
     "build:dev": "pnpm -r --filter @hwy-js/dev run build",
     "build:create-hwy": "pnpm -r --filter create-hwy run build",
-    "build": "npm run build:build && npm run build:dev && npm run build:core && npm run build:create-hwy",
+    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:create-hwy",
     "lint:build": "pnpm -r --filter @hwy-js/build run lint",
     "lint:core": "pnpm -r --filter hwy run lint",
     "lint:dev": "pnpm -r --filter @hwy-js/dev run lint",
@@ -23,7 +23,8 @@
     "dev:build": "pnpm -r --filter @hwy-js/build run dev",
     "dev:core": "pnpm -r --filter hwy run dev",
     "dev:dev": "pnpm -r --filter @hwy-js/dev run dev",
-    "dev": "npm-run-all --parallel dev:*",
+    "pre-test": "pnpm build && pnpm -r --filter tester-routes run build",
+    "dev": "pnpm pre-test && npm-run-all --parallel dev:*",
     "add-beta": "node scripts/add-beta.js",
     "remove-beta": "node scripts/remove-beta.js",
     "bump-beta": "node scripts/bump-beta.js",
@@ -32,15 +33,15 @@
     "bump-major": "node scripts/bump-major.js",
     "current-version": "node scripts/current-version.js",
     "set-version": "node scripts/set-version.js",
-    "test": "npx vitest run",
+    "test": "pnpm pre-test && npx vitest run",
     "typecheck:build": "pnpm -r --filter @hwy-js/build run typecheck",
     "typecheck:core": "pnpm -r --filter hwy run typecheck",
     "typecheck:dev": "pnpm -r --filter @hwy-js/dev run typecheck",
     "typecheck:create-hwy": "pnpm -r --filter create-hwy run typecheck",
     "typecheck": "npm-run-all --parallel typecheck:*",
-    "pre-publish": "pnpm run typecheck && pnpm run test && pnpm run build",
-    "publish-beta": "pnpm run pre-publish && pnpm -r publish-beta",
-    "publish-non-beta": "pnpm run pre-publish && pnpm -r publish-non-beta",
+    "pre-publish": "pnpm typecheck && pnpm test",
+    "publish-beta": "pnpm pre-publish && pnpm -r publish-beta",
+    "publish-non-beta": "pnpm pre-publish && pnpm -r publish-non-beta",
     "update-latest": "pnpm update --latest && pnpm -r update-latest && pnpm i"
   },
   "devDependencies": {
