--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "build:core": "pnpm -r --filter hwy run build",
     "build:dev": "pnpm -r --filter @hwy-js/dev run build",
     "build:create-hwy": "pnpm -r --filter create-hwy run build",
-    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:create-hwy",
+    "build:client": "pnpm -r --filter @hwy-js/client run build",
+    "build": "pnpm build:build && pnpm build:dev && pnpm build:core && pnpm build:create-hwy && pnpm build:client",
     "lint:build": "pnpm -r --filter @hwy-js/build run lint",
     "lint:core": "pnpm -r --filter hwy run lint",
     "lint:dev": "pnpm -r --filter @hwy-js/dev run lint",
     "lint:create-hwy": "pnpm -r --filter create-hwy run lint",
+    "lint:client": "pnpm -r --filter @hwy-js/client run lint",
     "lint": "npm-run-all --parallel lint:*",
     "dev:test": "npx vitest",
     "dev:build": "pnpm -r --filter @hwy-js/build run dev",
     "dev:core": "pnpm -r --filter hwy run dev",
     "dev:dev": "pnpm -r --filter @hwy-js/dev run dev",
+    "dev:client": "pnpm -r --filter @hwy-js/client run dev",
     "pre-test": "pnpm build && pnpm -r --filter tester-routes run build",
     "dev": "pnpm pre-test && npm-run-all --parallel dev:*",
     "add-beta": "node scripts/add-beta.js",
@@ -38,6 +41,7 @@
     "typecheck:core": "pnpm -r --filter hwy run typecheck",
     "typecheck:dev": "pnpm -r --filter @hwy-js/dev run typecheck",
     "typecheck:create-hwy": "pnpm -r --filter create-hwy run typecheck",
+    "typecheck:client": "pnpm -r --filter @hwy-js/client run typecheck",
     "typecheck": "npm-run-all --parallel typecheck:*",
     "pre-publish": "pnpm typecheck && pnpm test",
     "publish-beta": "pnpm pre-publish && pnpm -r publish-beta",
