--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -40,6 +40,7 @@
     "hono": "^3.9.0",
     "htmx.org": "^1.9.6",
     "hwy": "workspace:*",
+    "idiomorph": "^0.0.9",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
     "prettier": "^3.0.3",
