css hooks and misc (0.6.0-beta.1)

--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -10,6 +10,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
+    "@css-hooks/core": "^1.1.0",
     "@hono/node-server": "^1.2.0",
     "hono": "^3.9.0",
     "hwy": "workspace:*"
