--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hwy",
-  "version": "0.6.0-beta.0",
+  "version": "0.6.0-beta.1",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231025.0",
+    "@css-hooks/core": "^1.1.0",
     "@hono/node-server": "^1.2.0",
     "@types/inquirer": "^9.0.6",
     "@types/node": "^20.8.9",
