--- a/docs/package.json
+++ b/docs/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@hono/node-server": "^1.2.0",
     "hono": "^3.9.1",
-    "hwy": "0.6.0-beta.2"
+    "hwy": "0.6.0"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.6.0-beta.2",
-    "@hwy-js/client": "0.6.0-beta.2",
-    "@hwy-js/dev": "0.6.0-beta.2",
+    "@hwy-js/build": "0.6.0",
+    "@hwy-js/client": "0.6.0",
+    "@hwy-js/dev": "0.6.0",
     "@types/node": "^20.8.10",
     "@types/nprogress": "^0.2.2",
     "htmx.org": "^1.9.6",
