--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hwy-js/client",
-  "version": "0.6.0",
+  "version": "0.6.1-beta.8",
   "author": {
     "name": "Samuel J. Cook"
   },
