--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hwy",
-  "version": "0.7.0-beta.13",
+  "version": "0.7.0-beta.17",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -34,6 +34,7 @@
     "@cloudflare/workers-types": "^4.20231025.0",
     "@css-hooks/core": "^1.2.1",
     "@hono/node-server": "^1.2.2",
+    "@hwy-js/utils": "workspace:*",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.9.0",
     "@types/nprogress": "^0.2.3",
