--- a/testers/cf-pages/package.json
+++ b/testers/cf-pages/package.json
@@ -21,6 +21,7 @@
     "@cloudflare/workers-types": "^4.20231025.0",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@hwy-js/utils": "workspace:*",
     "@types/node": "^20.9.0",
     "htmx.org": "^1.9.8",
     "npm-run-all": "^4.1.5",
