--- a/docs/package.json
+++ b/docs/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.2.2",
-    "hono": "^3.9.2",
-    "hwy": "0.7.0-beta.13"
+    "hono": "^3.10.0",
+    "hwy": "workspace:*"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.7.0-beta.13",
-    "@hwy-js/client": "0.7.0-beta.13",
-    "@hwy-js/dev": "0.7.0-beta.13",
+    "@hwy-js/build": "workspace:*",
+    "@hwy-js/client": "workspace:*",
+    "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.9.0",
     "@types/nprogress": "^0.2.3",
     "htmx.org": "^1.9.8",
