--- a/docs/package.json
+++ b/docs/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@hono/node-server": "^1.2.2",
     "hono": "^3.10.0",
-    "hwy": "workspace:*"
+    "hwy": "0.7.0-beta.20"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:*",
-    "@hwy-js/client": "workspace:*",
-    "@hwy-js/dev": "workspace:*",
+    "@hwy-js/build": "0.7.0-beta.20",
+    "@hwy-js/client": "0.7.0-beta.20",
+    "@hwy-js/dev": "0.7.0-beta.20",
     "@types/node": "^20.9.0",
     "@types/nprogress": "^0.2.3",
     "htmx.org": "^1.9.8",
