--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hwy",
-  "version": "0.7.0-beta.22",
+  "version": "0.7.0-beta.23",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -21,12 +21,15 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@hono/node-server": "^1.2.2",
+    "@hono/node-server": "^1.2.3",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.9.0",
-    "hono": "^3.10.0",
+    "hono": "^3.10.1",
     "tsup": "^7.2.0"
+  },
+  "peerDependencies": {
+    "hono": "^3.10.0"
   },
   "repository": {
     "type": "git",
