--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@hwy-js/dev",
+  "name": "@hwy-js/utils",
   "version": "0.7.0",
   "author": {
     "name": "Samuel J. Cook"
   },
   "license": "MIT",
-  "description": "Development tools for Hwy framework",
+  "description": "Various utilities for Hwy framework",
   "type": "module",
   "main": "dist/index.js",
   "files": [
@@ -20,11 +20,7 @@
     "update-latest": "pnpm update --latest",
     "typecheck": "tsc --noEmit"
   },
-  "dependencies": {
-    "picocolors": "^1.0.0"
-  },
   "devDependencies": {
-    "@types/node": "^20.9.0",
     "hono": "^3.10.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
@@ -32,8 +28,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/hwy-js/hwy",
-    "directory": "packages/dev"
+    "directory": "packages/utils"
   },
   "homepage": "https://hwy.dev",
-  "bugs": "https://github.com/hwy-js/hwy/issues"
+  "bugs": "https://github.com/hwy-js/hwy/issues",
+  "sideEffects": false
 }
