--- a/testers/cf-pages/package.json
+++ b/testers/cf-pages/package.json
@@ -13,16 +13,17 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@hono/node-server": "^1.2.0",
-    "hono": "^3.9.1",
+    "@hono/node-server": "^1.2.3",
+    "hono": "^3.10.1",
     "hwy": "workspace:*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231025.0",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
-    "@types/node": "^20.8.10",
-    "htmx.org": "^1.9.6",
+    "@hwy-js/utils": "workspace:*",
+    "@types/node": "^20.9.0",
+    "htmx.org": "^1.9.8",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
