--- a/docs/package.json
+++ b/docs/package.json
@@ -12,20 +12,20 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@hono/node-server": "^1.2.3",
-    "hono": "^3.10.1",
-    "hwy": "0.7.1"
+    "@hono/node-server": "^1.3.1",
+    "hono": "^3.10.4",
+    "hwy": "workspace:*"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.7.1",
-    "@hwy-js/client": "0.7.1",
-    "@hwy-js/dev": "0.7.1",
-    "@types/node": "^20.9.0",
+    "@hwy-js/build": "workspace:*",
+    "@hwy-js/client": "workspace:*",
+    "@hwy-js/dev": "workspace:*",
+    "@types/node": "^20.10.2",
     "@types/nprogress": "^0.2.3",
-    "htmx.org": "^1.9.8",
+    "htmx.org": "^1.9.9",
     "idiomorph": "^0.0.9",
     "nprogress": "^0.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.14.1"
