--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hwy",
-  "version": "0.7.1",
+  "version": "0.7.2-beta.12",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -21,15 +21,15 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@hono/node-server": "^1.2.3",
+    "@hono/node-server": "^1.3.1",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
-    "@types/node": "^20.9.0",
-    "hono": "^3.10.1",
-    "tsup": "^7.2.0"
+    "@types/node": "^20.10.2",
+    "hono": "^3.10.4",
+    "tsup": "^8.0.1"
   },
   "peerDependencies": {
-    "hono": "^3.10.0"
+    "hono": "^3.10.4"
   },
   "repository": {
     "type": "git",
