--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hwy",
-  "version": "0.7.1",
+  "version": "0.7.2-beta.12",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -31,25 +31,25 @@
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231025.0",
-    "@css-hooks/core": "^1.2.1",
-    "@hono/node-server": "^1.2.3",
+    "@cloudflare/workers-types": "^4.20231121.0",
+    "@css-hooks/core": "^1.3.0",
+    "@hono/node-server": "^1.3.1",
     "@hwy-js/utils": "workspace:*",
     "@types/inquirer": "^9.0.7",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.10.2",
     "@types/nprogress": "^0.2.3",
-    "bun-types": "^1.0.11",
-    "hono": "^3.10.1",
-    "htmx.org": "^1.9.8",
+    "bun-types": "^1.0.14",
+    "hono": "^3.10.4",
+    "htmx.org": "^1.9.9",
     "hwy": "workspace:*",
     "idiomorph": "^0.0.9",
     "npm-run-all": "^4.1.5",
     "nprogress": "^0.2.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
-    "wrangler": "^3.15.0"
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
+    "wrangler": "^3.18.0"
   },
   "repository": {
     "type": "git",
