--- a/packages/create-hwy/package.json
+++ b/packages/create-hwy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-hwy",
-  "version": "0.8.0-beta.4",
+  "version": "0.8.0-beta.6",
   "author": {
     "name": "Samuel J. Cook"
   },
@@ -16,11 +16,13 @@
   "scripts": {
     "build": "rm -rf dist && tsup-node index.ts --format esm",
     "lint": "tsc",
-    "create-hwy": "pnpm run build && node dist/index.js",
+    "create-hwy": "pnpm clear-asdf && pnpm run build && node dist/index.js",
     "publish-beta": "npm publish --tag beta",
     "publish-non-beta": "npm publish",
     "update-latest": "pnpm update --latest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clear-asdf": "rm -rf asdf",
+    "print-asdf": "cat asdf/package.json"
   },
   "bin": {
     "create-hwy": "./scripts/create-hwy.js"
@@ -36,10 +38,10 @@
     "@hono/node-server": "^1.3.1",
     "@hwy-js/utils": "workspace:*",
     "@types/inquirer": "^9.0.7",
-    "@types/node": "^20.10.2",
+    "@types/node": "^20.10.3",
     "@types/nprogress": "^0.2.3",
-    "bun-types": "^1.0.14",
-    "hono": "^3.10.4",
+    "bun-types": "^1.0.15",
+    "hono": "^3.10.5",
     "htmx.org": "^1.9.9",
     "hwy": "workspace:*",
     "idiomorph": "^0.0.9",
