--- a/docs/package.json
+++ b/docs/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.3.1",
-    "hono": "^3.10.5",
-    "hwy": "0.8.0-beta.6"
+    "hono": "^3.11.1",
+    "hwy": "workspace:0.8.0-beta.6"
   },
   "devDependencies": {
-    "@hwy-js/build": "0.8.0-beta.6",
-    "@hwy-js/client": "0.8.0-beta.6",
-    "@hwy-js/dev": "0.8.0-beta.6",
+    "@hwy-js/build": "workspace:0.8.0-beta.6",
+    "@hwy-js/client": "workspace:0.8.0-beta.6",
+    "@hwy-js/dev": "workspace:0.8.0-beta.6",
     "@types/node": "^20.10.3",
     "@types/nprogress": "^0.2.3",
     "htmx.org": "^1.9.9",
