--- a/docs/package.json
+++ b/docs/package.json
@@ -14,17 +14,18 @@
   "dependencies": {
     "@hono/node-server": "^1.3.1",
     "hono": "^3.11.1",
-    "hwy": "workspace:0.8.0-beta.6"
+    "hwy": "workspace:*",
+    "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@hwy-js/build": "workspace:0.8.0-beta.6",
-    "@hwy-js/client": "workspace:0.8.0-beta.6",
-    "@hwy-js/dev": "workspace:0.8.0-beta.6",
+    "@preact/signals": "^1.2.2",
+    "@hwy-js/build": "workspace:*",
+    "@hwy-js/client": "workspace:*",
+    "@hwy-js/dev": "workspace:*",
     "@types/node": "^20.10.3",
     "@types/nprogress": "^0.2.3",
-    "htmx.org": "^1.9.9",
-    "idiomorph": "^0.0.9",
     "nprogress": "^0.2.0",
+    "preact": "^10.19.2",
     "typescript": "^5.3.2"
   },
   "engines": {
