--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,12 +8,10 @@
   "description": "Simple, lightweight, and flexible web framework, built on Hono and HTMX.",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./types/htmx": "./types/htmx.d.ts"
+    ".": "./dist/index.js"
   },
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
   "scripts": {
     "build": "rm -rf dist && tsup-node index.ts --format esm --dts",
@@ -28,8 +26,12 @@
     "@hono/node-server": "^1.3.1",
     "@hwy-js/build": "workspace:*",
     "@hwy-js/dev": "workspace:*",
+    "@preact/signals": "^1.2.2",
     "@types/node": "^20.10.3",
+    "devalue": "^4.3.2",
     "hono": "^3.11.1",
+    "preact": "^10.19.2",
+    "preact-render-to-string": "^6.3.1",
     "tsup": "^8.0.1"
   },
   "peerDependencies": {
@@ -59,5 +61,6 @@
     "tsx",
     "nextjs",
     "remix"
-  ]
+  ],
+  "sideEffects": false
 }
