--- a/testers/cf-pages/package.json
+++ b/testers/cf-pages/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@hono/node-server": "^1.3.1",
     "hono": "^3.11.1",
-    "hwy": "workspace:*"
+    "hwy": "workspace:*",
+    "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231121.0",
@@ -25,6 +26,7 @@
     "@types/node": "^20.10.3",
     "htmx.org": "^1.9.9",
     "npm-run-all": "^4.1.5",
+    "preact": "^10.19.2",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.2",
     "wrangler": "^3.18.0"
