--- a/testers/cf-pages/tsconfig.json
+++ b/testers/cf-pages/tsconfig.json
@@ -8,8 +8,9 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
+    "jsxImportSource": "preact",
     "types": ["@cloudflare/workers-types", "node"]
   },
   "exclude": ["node_modules", "dist"]
