--- a/testers/routes/package.json
+++ b/testers/routes/package.json
@@ -13,7 +13,8 @@
     "@css-hooks/core": "^1.3.0",
     "@hono/node-server": "^1.3.1",
     "hono": "^3.11.1",
-    "hwy": "workspace:*"
+    "hwy": "workspace:*",
+    "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
     "@hwy-js/build": "workspace:*",
@@ -22,6 +23,7 @@
     "@types/node": "^20.10.3",
     "htmx.org": "^1.9.9",
     "idiomorph": "^0.0.9",
+    "preact": "^10.19.2",
     "typescript": "^5.3.2"
   },
   "engines": {
