--- a/testers/routes/tsconfig.json
+++ b/testers/routes/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
+    "jsxImportSource": "preact",
     "paths": {
       "~/*": ["./*"]
     }
