--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -5,12 +5,11 @@
     "moduleResolution": "NodeNext",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "preact",
-    "verbatimModuleSyntax": true
+    "jsxImportSource": "preact"
   },
   "exclude": ["node_modules", "dist"]
 }
