--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -7,8 +7,9 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   },
   "exclude": ["node_modules", "dist"]
 }
